--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <h2 class="section-title">The Team</h2>
             <div class="staff-grid">
                 <div class="staff-member">
-                    <span class="rank-label">Owner</span>
-                    <h3>Haxff.blockdogcat</h3>
+                    <span class="rank-label">Founder, Owner, Website Manager</span>
+                    <h3>Haxff/blockdogcat</h3>
                 </div>
                 <div class="staff-member">
                     <span class="rank-label admin">Admin</span>
@@ -149,4 +149,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
