--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1>VERSE</h1>
                     <p>We are a community that hosts Build Island servers, gametimes, and Minecraft servers. We specialize in projects like <strong>Community Modkits</strong> in Build Island—invented by us and exclusively supported by our team.</p>
                     <div class="hero-subtext">
-                        <span>RoBuild Community</span> • <span>LACR</span> • <span>Puck Studio</span>
+                        <span>RoBuild Community</span> • <span>LACRP</span> • <span>Puck Studio</span>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <span class="status-tag">SUSPENDED</span>
                         <h3>SeaVille</h3>
                         <p class="desc">Our flagship city in Build Island.</p>
-                        <div class="expand-content hidden">SeaVille will be brought back once Build Island is back online.</div>
+                        <div class="expand-content hidden">SeaVille will be brought back once Build Island is brought back by the developers.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -69,10 +69,10 @@
                 <div class="project-card">
                     <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=RoCity" alt="RoCity"></div>
                     <div class="card-content">
-                        <span class="status-tag">SUSPENDED</span>
+                        <span class="status-tag">CANCELLED</span>
                         <h3>RoCity</h3>
-                        <p class="desc">Legendary hosted city series.</p>
-                        <div class="expand-content hidden">A major pillar of our history in the RoBuild ecosystem.</div>
+                        <p class="desc">Legacy hosted city series.</p>
+                        <div class="expand-content hidden">A major pillar of our history in the Build Island history.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <span class="status-tag">ACTIVE</span>
                         <h3>Verse SMP</h3>
                         <p class="desc">Custom Minecraft Survival Multiplayer.</p>
-                        <div class="expand-content hidden">A custom-coded SMP experience built for the community.</div>
+                        <div class="expand-content hidden">A custom SMP experience made by us with proper moderation, no cheats and made for the players.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -91,10 +91,10 @@
                 <div class="project-card">
                     <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=Modkits" alt="Modkits"></div>
                     <div class="card-content">
-                        <span class="status-tag">ACTIVE</span>
-                        <h3>Community Modkits</h3>
-                        <p class="desc">The original Build Island modkits.</p>
-                        <div class="expand-content hidden">Invented by our team. We provide constant support and updates for these.</div>
+                        <span class="status-tag">SUSPENDED</span>
+                        <h3>Build Island Community Modkits</h3>
+                        <p class="desc">We make community modkits.</p>
+                        <div class="expand-content hidden">We have invented Community Modkits in Build Island, as of writing this we are making the most community modkits in the community. Current list: bdc_squidgame, bdc_barrels, bdc_palletes. Our community modkits are for public use, no need for credit but do not make money off of our models and dont claim theyre yours.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
                     <div class="card-content">
                         <span class="status-tag">ACTIVE</span>
                         <h3>Mods & Plugins</h3>
-                        <p class="desc">Custom assets and textures.</p>
-                        <div class="expand-content hidden">Visual assets and backend code for all our platforms.</div>
+                        <p class="desc">Custom assets.</p>
+                        <div class="expand-content hidden">Assets that we make such as Mods, Plugins, Textures or any other assets we provide.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -113,10 +113,10 @@
                 <div class="project-card">
                     <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=ERLC" alt="ERLC"></div>
                     <div class="card-content">
-                        <span class="status-tag">CANCELLED</span>
+                        <span class="status-tag">UPCOMING</span>
                         <h3>Alta: ERLC Server</h3>
-                        <p class="desc">Liberty County Roleplay Server.</p>
-                        <div class="expand-content hidden">High-quality roleplay hosted on the ERLC platform.</div>
+                        <p class="desc">Emergency Response: Liberty County Roleplay Server</p>
+                        <div class="expand-content hidden">High-quality server that we will start working on in the near future.</div>
                         <button class="read-more">Details</button>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
         <section id="support" class="scroll-section">
             <h2 class="section-title">Support</h2>
             <div class="support-box">
-                <p>Need help with Modkits or our servers? Join our official community hub.</p>
+                <p>Need help with Modkits or our servers? Join our official community hub with every type of support, informations about us.</p>
                 <a href="https://discord.gg/tddEpvsvK9" target="_blank" class="cta-button">Join Discord Server</a>
             </div>
         </section>
@@ -136,12 +136,12 @@
             <h2 class="section-title">The Team</h2>
             <div class="staff-grid">
                 <div class="staff-member">
-                    <span class="rank-label">Founder, Owner, Website Manager</span>
+                    <span class="rank-label">Founder/Owner/Website Manager</span>
                     <h3>Haxff/blockdogcat</h3>
                 </div>
                 <div class="staff-member">
                     <span class="rank-label admin">Admin</span>
-                    <h3>Joshua6jaar.Joshyi345</h3>
+                    <h3>Joshua6jaar/Joshyi345</h3>
                 </div>
             </div>
         </section>
@@ -151,3 +151,4 @@
 </body>
 
 </html>
+
