Modify project details and images in index.html
Updated project images and descriptions in the HTML file.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="projects-grid">
                 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=Alta" alt="Alta"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_Alta.jpg" alt="Alta"></div>
                     <div class="card-content">
                         <span class="status-tag">UPCOMING</span>
                         <h3>Alta</h3>
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=SeaVille" alt="SeaVille"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_SeaVille.jpg" alt="SeaVille"></div>
                     <div class="card-content">
                         <span class="status-tag">SUSPENDED</span>
                         <h3>SeaVille</h3>
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=RoCity" alt="RoCity"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_RoCity.jpg" alt="RoCity"></div>
                     <div class="card-content">
                         <span class="status-tag">CANCELLED</span>
                         <h3>RoCity</h3>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=Verse+SMP" alt="Verse SMP"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_VerseSMP.jpg" alt="Verse SMP"></div>
                     <div class="card-content">
                         <span class="status-tag">ACTIVE</span>
                         <h3>Verse SMP</h3>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=Modkits" alt="Modkits"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_Modkits.jpg" alt="Modkits"></div>
                     <div class="card-content">
                         <span class="status-tag">SUSPENDED</span>
                         <h3>Build Island Community Modkits</h3>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=Assets" alt="Assets"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_Assets.jpg" alt="Assets"></div>
                     <div class="card-content">
                         <span class="status-tag">ACTIVE</span>
                         <h3>Mods & Plugins</h3>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="thumbnail-16-9"><img src="https://via.placeholder.com/640x360/111/fff?text=ERLC" alt="ERLC"></div>
+                    <div class="thumbnail-16-9"><img src="Thumbnail_AltaERLC.jpg" alt="ERLC"></div>
                     <div class="card-content">
                         <span class="status-tag">UPCOMING</span>
                         <h3>Alta: ERLC Server</h3>
@@ -149,6 +149,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
